--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@keyvhq/core": "^1.6.9",
     "@keyvhq/redis": "^1.6.10",
     "@react-icons/all-files": "^4.1.0",
+    "@vercel/analytics": "^1.1.1",
     "@vercel/og": "^0.0.19",
+    "@vercel/speed-insights": "^1.0.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "expiry-map": "^2.0.0",
